--- a/subcategorylist.html
+++ b/subcategorylist.html
@@ -301,7 +301,7 @@
         <div class="sidebar-inner slimscroll">
           <div id="sidebar-menu" class="sidebar-menu">
             <ul>
-              <li>
+              <li class="active">
                 <a href="index.html"
                   ><img src="assets/img/icons/dashboard.svg" alt="img" /><span>
                     Dashboard</span
@@ -311,64 +311,31 @@
               <li class="submenu">
                 <a href="javascript:void(0);"
                   ><img src="assets/img/icons/product.svg" alt="img" /><span>
-                    Product</span
+                    Inventory</span
                   >
                   <span class="menu-arrow"></span
                 ></a>
                 <ul>
-                  <li><a href="productlist.html">Product List</a></li>
-                  <li><a href="addproduct.html">Add Product</a></li>
-                  <li><a href="categorylist.html">Category List</a></li>
-                  <li><a href="addcategory.html">Add Category</a></li>
+                  <li><a href="./productlist.html">Inventory List</a></li>
+                  <li><a href="./addproduct.html">Add Inventory</a></li>
+                  <li><a href="./categorylist.html">Category List</a></li>
+                  <li><a href="./addcategory.html">Add Category</a></li>
                   <li>
-                    <a href="subcategorylist.html" class="active"
-                      >Sub Category List</a
-                    >
+                    <a href="./subcategorylist.html">Sub Category List</a>
                   </li>
-                  <li><a href="subaddcategory.html">Add Sub Category</a></li>
+                  <li><a href="./subaddcategory.html">Add Sub Category</a></li>
                 </ul>
               </li>
               <li class="submenu">
                 <a href="javascript:void(0);"
                   ><img src="assets/img/icons/sales1.svg" alt="img" /><span>
-                    Sales</span
+                    Events</span
                   >
                   <span class="menu-arrow"></span
                 ></a>
                 <ul>
-                  <li><a href="saleslist.html">Sales List</a></li>
-                  <li><a href="addevent.html">POS</a></li>
-                  <li><a href="addevent.html">New Sales</a></li>
-                  <li><a href="salesreturnlists.html">Sales Return List</a></li>
-                  <li>
-                    <a href="createsalesreturns.html">New Sales Return</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="submenu">
-                <a href="javascript:void(0);"
-                  ><img src="assets/img/icons/purchase1.svg" alt="img" /><span>
-                    Purchase</span
-                  >
-                  <span class="menu-arrow"></span
-                ></a>
-                <ul>
-                  <li><a href="purchaselist.html">Purchase List</a></li>
-                  <li><a href="addpurchase.html">Add Purchase</a></li>
-                  <li><a href="importpurchase.html">Import Purchase</a></li>
-                </ul>
-              </li>
-              <li class="submenu">
-                <a href="javascript:void(0);"
-                  ><img src="assets/img/icons/expense1.svg" alt="img" /><span>
-                    Expense</span
-                  >
-                  <span class="menu-arrow"></span
-                ></a>
-                <ul>
-                  <li><a href="expenselist.html">Expense List</a></li>
-                  <li><a href="createexpense.html">Add Expense</a></li>
-                  <li><a href="expensecategory.html">Expense Category</a></li>
+                  <li><a href="saleslist.html">Events List</a></li>
+                  <li><a href="addevent.html">New Event</a></li>
                 </ul>
               </li>
 
@@ -380,15 +347,11 @@
                   <span class="menu-arrow"></span
                 ></a>
                 <ul>
-                  <li><a href="salesreturnlist.html">Sales Return List</a></li>
                   <li>
-                    <a href="createsalesreturn.html">Add Sales Return </a>
+                    <a href="salesreturnlist.html">Inventory Return List</a>
                   </li>
                   <li>
-                    <a href="purchasereturnlist.html">Purchase Return List</a>
-                  </li>
-                  <li>
-                    <a href="createpurchasereturn.html">Add Purchase Return </a>
+                    <a href="createsalesreturn.html">Add Inventory Return </a>
                   </li>
                 </ul>
               </li>
@@ -402,12 +365,13 @@
                 ></a>
                 <ul>
                   <li>
-                    <a href="purchaseorderreport.html">Purchase order report</a>
+                    <a href="./purchaseorderreport.html">Event Order report</a>
                   </li>
-                  <li><a href="inventoryreport.html">Inventory Report</a></li>
-                  <li><a href="purchasereport.html">Purchase Report</a></li>
-                  <li><a href="supplierreport.html">Supplier Report</a></li>
-                  <li><a href="customerreport.html">Customer Report</a></li>
+                  <li><a href="./inventoryreport.html">Inventory Report</a></li>
+                  <li>
+                    <a href="./invoicereport.html">Inventory Return Report</a>
+                  </li>
+                  <li><a href="./purchasereport.html">Purchase Report</a></li>
                 </ul>
               </li>
               <li class="submenu">
@@ -420,22 +384,6 @@
                 <ul>
                   <li><a href="newuser.html">New User </a></li>
                   <li><a href="userlists.html">Users List</a></li>
-                </ul>
-              </li>
-              <li class="submenu">
-                <a href="javascript:void(0);"
-                  ><img src="assets/img/icons/settings.svg" alt="img" /><span>
-                    Settings</span
-                  >
-                  <span class="menu-arrow"></span
-                ></a>
-                <ul>
-                  <li><a href="generalsettings.html">General Settings</a></li>
-                  <li><a href="emailsettings.html">Email Settings</a></li>
-                  <li><a href="paymentsettings.html">Payment Settings</a></li>
-                  <li><a href="currencysettings.html">Currency Settings</a></li>
-                  <li><a href="grouppermissions.html">Group Permissions</a></li>
-                  <li><a href="taxrates.html">Tax Rates</a></li>
                 </ul>
               </li>
             </ul>
