--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
       <div class="login-container">
         <div class="logo">
           <img
-            src="https://via.placeholder.com/150x50"
+            src="https://krishnatrust.com/images/logo.png"
             alt="Dreams POS Logo"
             id="logoImage"
           />
