--- a/sign-up.html
+++ b/sign-up.html
@@ -62,8 +62,8 @@
       <div class="signup-container">
         <div class="logo">
           <img
-            src="https://via.placeholder.com/150x50"
-            alt="Dreams POS Logo"
+          src="https://krishnatrust.com/images/logo.png"
+          alt="Dreams POS Logo"
             id="logoImage"
           />
         </div>
