--- a/productlist.html
+++ b/productlist.html
@@ -269,7 +269,7 @@
                   ><i class="me-2" data-feather="settings"></i>Settings</a
                 >
                 <hr class="m-0" />
-                <a class="dropdown-item logout pb-0" href="signin.html"
+                <a class="dropdown-item logout pb-0" href="login.html"
                   ><img
                     src="assets/img/icons/log-out.svg"
                     class="me-2"
@@ -292,7 +292,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="profile.html">My Profile</a>
             <a class="dropdown-item" href="generalsettings.html">Settings</a>
-            <a class="dropdown-item" href="signin.html">Logout</a>
+            <a class="dropdown-item" href="login.html">Logout</a>
           </div>
         </div>
       </div>
